@@ -1,24 +1,31 @@
 package com.forgeessentials.core.moduleLauncher;
 
 import java.util.Collection;
+import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.TreeMap;
+import java.util.stream.Collectors;
 
 import javax.annotation.Nullable;
+
+import org.objectweb.asm.Type;
 
 import com.forgeessentials.api.APIRegistry;
 import com.forgeessentials.api.APIRegistry.ForgeEssentialsRegistrar;
 import com.forgeessentials.core.ForgeEssentials;
-import com.forgeessentials.core.moduleLauncher.config.ConfigLoader;
+import com.forgeessentials.core.config.ConfigLoader;
 import com.forgeessentials.util.events.ConfigReloadEvent;
-import com.forgeessentials.util.events.FEModuleEvent.FEModulePreInitEvent;
+import com.forgeessentials.util.events.FEModuleEvent.FEModuleCommonSetupEvent;
 import com.forgeessentials.util.output.LoggingHandler;
+import com.google.common.collect.Maps;
 
-import net.minecraftforge.fml.common.Loader;
-import net.minecraftforge.fml.common.ModContainer;
-import net.minecraftforge.fml.common.discovery.ASMDataTable.ASMData;
-import net.minecraftforge.fml.common.event.FMLPreInitializationEvent;
+import net.minecraftforge.fml.ModContainer;
+import net.minecraftforge.fml.ModList;
+import net.minecraftforge.fml.common.ObfuscationReflectionHelper;
+import net.minecraftforge.fml.event.lifecycle.FMLCommonSetupEvent;
+import net.minecraftforge.forgespi.language.ModFileScanData;
+
+import static net.minecraftforge.registries.ForgeRegistry.REGISTRIES;
 
 public class ModuleLauncher
 {
@@ -28,19 +35,33 @@ public class ModuleLauncher
     }
 
     public static ModuleLauncher instance;
-    
+
     private static TreeMap<String, ModuleContainer> containerMap = new TreeMap<String, ModuleContainer>();
 
-    public void preLoad(FMLPreInitializationEvent e)
+    private static final Type MOD = Type.getType(FEModule.class);
+    
+    public void preLoad(FMLCommonSetupEvent e)
     {
         LoggingHandler.felog.info("Discovering and loading modules...");
 
-        // started ASM handling for the module loading
-        Set<ASMData> data = e.getAsmData().getAll(FEModule.class.getName());
+        final List<ModFileScanData.AnnotationData> data = ModList.get().getAllScanData().stream()
+                .map(ModFileScanData::getAnnotations)
+                .flatMap(Collection::stream)
+                .filter(a -> MOD.equals(a.getAnnotationType()))
+                .collect(Collectors.toList());
 
+        Map<Type, String> classModIds = Maps.newHashMap();
+
+        // Gather all @FEModule classes
+        data.stream().filter(a -> MOD.equals(a.getAnnotationType())).forEach(info -> classModIds.put(info.getClassType(), (String)info.getAnnotationData().get("value")));
+        LoggingHandler.felog.info("Found {} FEModule annotations", data.size());
+            
+        // started ASM handling for the module loading
+        //Set<ASMData> data = e.getAsmData().getAll(FEModule.class.getName());
+        
         // LOAD THE MODULES!
         ModuleContainer temp, other;
-        for (ASMData asm : data)
+        for (ModFileScanData.AnnotationData asm : data)
         {
             temp = new ModuleContainer(asm);
             if (temp.isLoadable && !APIRegistry.FE_EVENTBUS.post(new ModuleRegistrationEvent(temp)))
@@ -73,19 +94,23 @@ public class ModuleLauncher
 
         CallableMap map = new CallableMap();
 
-        data = e.getAsmData().getAll(ForgeEssentialsRegistrar.class.getName());
+       
+        // Gather all @FEModule classes
+        data.stream().filter(a -> Type.getType(ForgeEssentialsRegistrar.class).equals(a.getAnnotationType())).forEach(info -> classModIds.put(info.getClassType(), (String)info.getAnnotationData().get("value")));
+        LoggingHandler.felog.info(REGISTRIES,"Found {} ForgeEssentialsRegistrar annotations", data.size());
+
         Class<?> c;
         Object obj = null;
-        for (ASMData asm : data)
+        for (ModFileScanData.AnnotationData asm : data)
         {
             try
             {
                 obj = null;
-                c = Class.forName(asm.getClassName());
+                c = Class.forName((String) asm.getAnnotationData().getClass().getName());
 
                 try
                 {
-                    obj = c.newInstance();
+                    obj = c.getDeclaredConstructor().newInstance();
                     map.scanObject(obj);
                     // this works?? skip everything else and go on to the next one.
                     continue;
@@ -105,7 +130,8 @@ public class ModuleLauncher
             }
         }
 
-        for (ModContainer container : Loader.instance().getModList())
+        List<ModContainer> modList = ObfuscationReflectionHelper.getPrivateValue(ModList.class, (ModList) ModList.get(), "mods");
+        for (ModContainer container :modList)
             if (container.getMod() != null)
                 map.scanObject(container);
 
@@ -119,7 +145,7 @@ public class ModuleLauncher
             if (module.module instanceof ConfigLoader)
             {
                 LoggingHandler.felog.debug("Registering configuration for FE module " + module.name);
-                ForgeEssentials.getConfigManager().registerLoader(module.name, (ConfigLoader) module.module, false);
+                ForgeEssentials.getConfigManager().registerSpecs(module.name, (ConfigLoader) module.module);
             }
             else
             {
@@ -127,14 +153,18 @@ public class ModuleLauncher
             }
         }
 
-        APIRegistry.getFEEventBus().post(new FEModulePreInitEvent(e));
 
-        ForgeEssentials.getConfigManager().load(false);
+        // TODO Check if this works
+        ForgeEssentials.getConfigManager().loadAllRegisteredConfigs();
+        // TODO Check if this works
+        ForgeEssentials.getConfigManager().bakeAllRegisteredConfigs(false);
+        APIRegistry.getFEEventBus().post(new FEModuleCommonSetupEvent(e));
     }
 
     public void reloadConfigs()
     {
-        ForgeEssentials.getConfigManager().load(true);
+        // TODO Check if this works
+        ForgeEssentials.getConfigManager().bakeAllRegisteredConfigs(true);
         APIRegistry.getFEEventBus().post(new ConfigReloadEvent());
     }
 
@@ -156,7 +186,8 @@ public class ModuleLauncher
     }
 
     @Nullable
-    public static ModuleContainer getModuleContainer(String slug) {
+    public static ModuleContainer getModuleContainer(String slug)
+    {
         return containerMap.getOrDefault(slug, null);
     }
 }
